[gd_scene load_steps=5 format=2]

[ext_resource path="res://Chest.tscn" type="PackedScene" id=1]
[ext_resource path="res://Mutsu.tscn" type="PackedScene" id=7]
[ext_resource path="res://Pirates.gd" type="Script" id=8]
[ext_resource path="res://Pirates.tres" type="TileSet" id=9]

[node name="Pirate Ship" type="Node"]
script = ExtResource( 8 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 9 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
collision_friction = 0.25
format = 1
tile_data = PoolIntArray( -2228230, 0, 0, -2162694, 0, 0, -2097158, 0, 0, -2031622, 0, 0, -1835019, 0, 0, -1835018, 0, 0, -1835017, 0, 0, -1835016, 0, 0, -1835015, 0, 0, -1835014, 0, 0, -1835012, 0, 0, -1835011, 0, 0, -1835010, 0, 0, -1835009, 0, 0, -1900544, 0, 0, -1900543, 0, 0, -1900542, 0, 0, -1900541, 0, 0, -1900540, 0, 0, -1900539, 0, 0, -1900538, 0, 0, -1900537, 0, 0, -1769478, 0, 0, -1834998, 0, 0, -1703942, 0, 0, -1769463, 0, 0, -1638406, 0, 0, -1703928, 0, 0, -1572870, 0, 0, -1638399, 0, 0, -1638395, 0, 0, -1638394, 0, 0, -1638393, 0, 0, -1507334, 0, 0, -1572863, 0, 0, -1572862, 0, 0, -1572857, 0, 0, -1441798, 0, 0, -1507327, 0, 0, -1376262, 0, 0, -1441791, 0, 0, -1310726, 0, 0, -1376254, 0, 0, -1376253, 0, 0, -1376252, 0, 0, -1376251, 0, 0, -1376250, 0, 0, -1245190, 0, 0, -1310713, 0, 0, -1179654, 0, 0, -1245174, 0, 0, -1114136, 0, 0, -1114135, 0, 0, -1114134, 0, 0, -1114133, 0, 0, -1114132, 0, 0, -1114131, 0, 0, -1114130, 0, 0, -1114129, 0, 0, -1114118, 0, 0, -1179639, 0, 0, -1048600, 0, 0, -1048599, 0, 0, -1048598, 0, 0, -1048597, 0, 0, -1048596, 0, 0, -1048595, 0, 0, -1048594, 0, 0, -1048593, 0, 0, -1048582, 0, 0, -1114104, 0, 0, -983064, 0, 0, -983063, 0, 0, -983062, 0, 0, -983061, 0, 0, -983060, 0, 0, -983059, 0, 0, -983058, 0, 0, -983057, 0, 0, -983046, 0, 0, -1048569, 0, 0, -917528, 0, 0, -917521, 0, 0, -917510, 0, 0, -983033, 0, 0, -851992, 0, 0, -851985, 0, 0, -851974, 0, 0, -917500, 0, 0, -917499, 0, 0, -917498, 0, 0, -917497, 0, 0, -786456, 0, 0, -851942, 0, 0, -851941, 0, 0, -851940, 0, 0, -851939, 0, 0, -851938, 0, 0, -851937, 0, 0, -720920, 0, 0, -786410, 0, 0, -786409, 0, 0, -786408, 0, 0, -786407, 0, 0, -786406, 0, 0, -655384, 0, 0, -655383, 0, 0, -655382, 0, 0, -655381, 0, 0, -655380, 0, 0, -655379, 0, 0, -655378, 0, 0, -655377, 0, 0, -655376, 0, 0, -655375, 0, 0, -655374, 0, 0, -655373, 0, 0, -655372, 0, 0, -655371, 0, 0, -655370, 0, 0, -655369, 0, 0, -655368, 0, 0, -655367, 0, 0, -655366, 0, 0, -655365, 0, 0, -655364, 0, 0, -655363, 0, 0, -655362, 0, 0, -655361, 0, 0, -720896, 0, 0, -720895, 0, 0, -720894, 0, 0, -720893, 0, 0, -720892, 0, 0, -720891, 0, 0, -720890, 0, 0, -720889, 0, 0, -720888, 0, 0, -720887, 0, 0, -720886, 0, 0, -720885, 0, 0, -720884, 0, 0, -720883, 0, 0, -720882, 0, 0, -720881, 0, 0, -720880, 0, 0, -720879, 0, 0, -720878, 0, 0, -720874, 0, 0, -589848, 0, 0, -655338, 0, 0, -524312, 0, 0, -524311, 0, 0, -589803, 0, 0, -589802, 0, 0, -458775, 0, 0, -458774, 0, 0, -458773, 0, 0, -524269, 0, 0, -524268, 0, 0, -524267, 0, 0, -393237, 0, 0, -393236, 0, 0, -458734, 0, 0, -458733, 0, 0, -327700, 0, 0, -327699, 0, 0, -393199, 0, 0, -393198, 0, 0, -262163, 0, 0, -262162, 0, 0, -262161, 0, 0, -262157, 0, 0, -262156, 0, 0, -262155, 0, 0, -262154, 0, 0, -262153, 0, 0, -262152, 0, 0, -262151, 0, 0, -262150, 0, 0, -262149, 0, 0, -262148, 0, 0, -262147, 0, 0, -262146, 0, 0, -262145, 0, 0, -327680, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 0, -327668, 0, 0, -327667, 0, 0, -327666, 0, 0, -327665, 0, 0, -327664, 0, 0, -327663, 0, 0, -196626, 0, 0, -196625, 0, 0, -262129, 0, 0, -262128, 0, 0, -131089, 0, 0, -131088, 0, 0, -196594, 0, 0, -196593, 0, 0, -65552, 0, 0, -65551, 0, 0, -65550, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -14, 0, 0, -13, 0, 0, -65525, 0, 0, -65524, 0, 0, 65523, 0, 0, 65524, 0, 0, 65525, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 131061, 0, 0, 131062, 0, 0, 131063, 0, 0, 131064, 0, 0, 131065, 0, 0, 131066, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0 )

[node name="Mutsu" parent="." instance=ExtResource( 7 )]
position = Vector2( 207, -44 )
gravity_scale = 10.0

[node name="Chest" parent="." instance=ExtResource( 1 )]
position = Vector2( 159, -9 )

[node name="Chest1" parent="." instance=ExtResource( 1 )]
position = Vector2( -272, -89 )

[node name="Chest2" parent="." instance=ExtResource( 1 )]
position = Vector2( 51, -345 )

[node name="Chest3" parent="." instance=ExtResource( 1 )]
position = Vector2( -360, -297 )

[node name="Chest4" parent="." instance=ExtResource( 1 )]
position = Vector2( -350, -185 )

[connection signal="body_shape_entered" from="Chest" to="." method="_on_Chest_body_shape_entered"]
[connection signal="body_shape_entered" from="Chest1" to="." method="_on_Chestnoloot_body_shape_entered"]
[connection signal="body_shape_entered" from="Chest2" to="." method="_on_Chestmastfake_body_shape_entered"]
[connection signal="body_shape_entered" from="Chest3" to="." method="_on_Chestcabinreal_body_shape_entered"]
[connection signal="body_shape_entered" from="Chest4" to="." method="_on_Chestcabinfake_body_shape_entered"]
